@startuml

interface KeyListener

class BufferedImage << (C, cyan) >>
class JFrame << (C, cyan) >>
class JPanel << (C, cyan) >>

hide empty members

package fr.ul.acl.engine #DDDDDD {

  enum Cmd {
    LEFT
    RIGHT
    UP
    DOWN
    IDLE
  }

  interface Game {
    +void evolve(Cmd)
    +boolean isFinished()
  }

  interface GameController {
    +Cmd getCommand()
  }

  interface GamePainter {
    +void draw(BufferedImage)
    +int getWidth()
    +int getHeight()
  }

  class DrawingPanel {
    +int width
    +int height
    +void drawGame()
    +void paint(Graphics)
  }

  class GraphicalInterface {
    + void paint()
  }

  class GameEngineGraphical {
    +void run()
  }

  GamePainter "1" -- DrawingPanel
  BufferedImage "2" -- DrawingPanel

  DrawingPanel "1" -- GraphicalInterface

  Game "1" -- GameEngineGraphical
  GamePainter "1" -- GameEngineGraphical
  GameController "1" -- GameEngineGraphical
  GraphicalInterface "1" -- GameEngineGraphical

  hide empty members

}

KeyListener <|-- GameController
JPanel <|-- DrawingPanel
JFrame <-- GraphicalInterface

@enduml